# data-diff-n8n

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.api  PROJECT_STRUCTURE.md  README.md  cleanup-old-scripts.sh  cleanup_phase2.py  cleanup_root_directory.py  create-test-tables.sql  data-diff-n8n.code-workspace  dev_helper.py  docker-compose.dev.yml  docker-start.sh  fix_advanced_routes.py  fix_backend_init.py  health-check.sh  pyproject.toml  rename_project_steps.md  rename_to_n8n.sh  restart-n8n.sh  start.sh  test_api.py  test_api_combined.py  test_api_health.py  test_api_query.py  test_comparison_engine.py  test_n8n_api_call.py  test_n8n_format.py  test_n8n_formats.py  test_n8n_request.py  test_simple_api.py
data_diff/: __init__.py  column_remapping.py  column_statistics.py  dbt_parser.py  difference_classifier.py  float_tolerance.py  joindiff_tables.py  json_comparison.py  table_segment.py  timeline_analyzer.py  timestamp_precision.py
dev/: clear-materialized-records-selective.sql  clear-materialized-records.sql  init-databases.sql  update-data-diff-results-schema.sql
docs/: AUTOMATION_FEATURES.md  CLICKZETTA_FIX_SUMMARY.md  CLICKZETTA_TESTING_GUIDE.md  DATABASE_CONNECTOR_API_DEPENDENCIES.md  DATABASE_CONNECTOR_EXECUTE_QUERY_FEATURE.md  DATABASE_REGISTRY_REFACTOR_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DOCKERFILE_N8N_CLEANUP.md  DOCKER_CLEANUP_COMPLETION.md  DOCKER_CLEANUP_SUMMARY.md  DOCUMENTATION_REORGANIZATION.md  LOCAL_DEV.md  MONITORING_INTEGRATION_SUMMARY.md  MONITORING_QUICK_START.md  NGINX_INTEGRATION.md  README.md  ROOT_CLEANUP_COMPLETION_REPORT.md  SERVICE_ACCESS_REPORT.md  STARTUP_GUIDE.md  UNSUPPORTED_DATA_TYPES.md  UNSUPPORTED_TYPES_IMPLEMENTATION_SUMMARY.md  advanced-options-implementation-guide.md  auto-callback-example.md  callback-default-behavior.md  callback-mechanism-design.md  clarification-node-inputs.md  clickzetta-type-support-update.md  column-remapping-guide.md  column-remapping-n8n-usage.md  column-statistics-feature.md  conf.py  database-schema-consistency-check.md  dual-input-comparison-example.md  example-workflow-prepare-comparison.md  feature-comparison.md  float-tolerance-guide.md  index.rst  json-comparison-guide.md  monitoring-design.md  n8n-async-patterns.md  (+20 more)
docs_archive/: DATABASE_CONNECTOR_EXECUTE_QUERY_FEATURE.md  MOCK_REMOVAL_COMPLETION_REPORT.md  NODE_NAMING_ANALYSIS_REPORT.md  REFACTORING_COMPLETION_REPORT.md  ROOT_CLEANUP_COMPLETION_REPORT.md  ROOT_CLEANUP_REPORT.md  SCHEMA_OUTPUT_IMPROVEMENT_SUMMARY.md
monitoring/: DASHBOARDS_GUIDE.md  README.md  alerting-rules.yml  alertmanager.yml  metrics_calculation_guide.md
n8n/: DATABASE_CONNECTION_URL_FIX.md  POSTGRESQL_TYPE_FIX.md  README.md  README_NEW.md  __init__.py  package-lock.json  package.dist.json  package.json  (+2 more)
(+160 files in other folders)
