[tool.poetry]
name = "data-diff-n8n"
version = "0.11.2"
description = "Command-line tool and Python library to efficiently diff rows across two different databases."
authors = ["Datafold <data-diff@datafold.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yunqiqiliang/data-diff-n8n"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed"
]
packages = [{ include = "data_diff" }]
[tool.poetry.dependencies]
pydantic = ">=1.10.12"
python = ">=3.11,<4.0"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
python-multipart = "*"
redis = "*"
celery = "*"
prometheus-client = "*"
psutil = "*"
croniter = "*"
requests = "*"
PyYAML = "*"
dsnparse = "<0.2.0"
click = ">=8.1"
rich = "*"
toml = ">=0.10.2"
mysql-connector-python = ">=8.0.29"
psycopg2-binary = "*"
clickzetta-connector-python = ">=0.8.51"
snowflake-connector-python = {version = ">=3.0.2,<4.0.0", optional=true}
cryptography = {version="*", optional=true}
trino = ">=0.314.0"
presto-python-client = "*"
duckdb = "*"
pyodbc = ">=4.0.39"
clickhouse-driver = {version="*", optional=true}
dbt-core = {version="^1.0.0"}
keyring = "*"
tabulate = ">=0.9.0"
preql = {version=">=0.2.19", optional=true}
vertica-python = {version="*", optional=true}
urllib3 = "<2"
oracledb = {version = "*", optional=true}
typing-extensions = ">=4.0.1"
attrs = ">=23.1.0"
mashumaro = {version = ">=2.9,<3.11.0", extras = ["msgpack"]}
protobuf = "5.28.3"
scipy = ">=1.11.0"
numpy = ">=1.24.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.5.0"
parameterized = "*"
unittest-parallel = "*"
preql = ">=0.2.19"
mysql-connector-python = "*"
psycopg2 = "*"
snowflake-connector-python = ">=3.0.2,<4.0.0"
cryptography = "*"
trino = ">=0.314.0"
presto-python-client = ">=0.8.3"
clickhouse-driver = "*"
vertica-python = "*"
duckdb = ">=0.9.0"
dbt-core = ">=1.0.0"
ruff = ">=0.1.4"
clickzetta-connector-python = ">=0.8.51"
# google-cloud-bigquery = "*"
# databricks-sql-connector = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
data-diff = 'data_diff.__main__:main'

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.black]
line-length = 120
